Swagger merge conflicts correction
