# server/swagger/swagger.json
@@ -23,146 +23,210 @@
             "schema": {
                 "$ref": "#definitions/User"
             }
-        }],
-          "responses": {}
-            }
-        },
-        "/login":{
-            "post":{
-              "x-swagger-router-controller": "middleware-name3",
-              "operationId": "login",
-              "tags": ["Login"],
-              "summary": "Log a user",
-              "parameters": [{
-                "in": "body",
-                "name": "body",
-                "description": "Login data",
-                "required": true,
-                "schema": {
-                    "$ref": "#definitions/Login"
-                }
-            }],
-            "responses": {}  
-            }
-        },
-        "/appointments": {
-            "get": {
-                "x-swagger-router-controller": "middleware-name3",
-                "operationId": "showAppointments",
-                "tags": ["Appointments"],
-                "summary": "Show appointments",
-                "parameters": [{
-                    "in": "query",
-                    "name": "page",
-                    "required": false,
-                    "type": "string"
-                }, {
-                    "in": "query",
-                    "name": "size",
-                    "required": false,
-                    "type": "string" 
-                }, {
-                    "in": "query",
-                    "name": "order",
-                    "required": false,
-                    "type": "string"
-                }, {
-                    "in": "query",
-                    "name": "way",
-                    "required": false,
-                    "type": "string"
-                }, {
-                    "in": "header",
-                    "name": "authorization",
-                    "require": true,
-                    "type": "string"
-                }],
-                "responses": {
-
-                }
-            }
-        }
+          }
+        ],
+        "responses": {}
+      }
     },
-        "definitions": {
-            "User": {
-            "properties": {
-                "name":{
-                    "type": "string"
-                },
-                "middleName":{
-                    "type": "string"
-                },
-                "lastName":{
-                    "type": "string"
-                },
-                "email":{
-                    "type": "string"
-                },
-                "phone":{
-                    "type": "string"
-                },
-                "password":{
-                    "type": "string"
-                },
-                "birthdate":{
-                    "type": "date"
-                },
-                "maritalStatus":{
-                    "type": "string"
-                },
-                "idRecord":{
-                    "type": "Schema.Types.ObjectId",
-                    "ref": "records"
-                }, 
-                "status":{
-                    "type": "boolean",
-                    "default": "true"
-                },
-                "background":{
-                    "type": "boolean"
-                },
-                "range": {
-                    "type": "number",
-                    "default": "1"
-                }
-            },
-            "xml": {
-                "name": "User"
-            }
-        },
-        "Login": {
-            "properties": {
-              "email": {
-                "type": "string"
-              },
-              "password": {
-                "type": "string"
-              }
-            },
-            "xml": {
-              "name": "Login"
+    "/user/register": {
+      "post": {
+        "x-swagger-router-controller": "middleware-name1",
+        "operationId": "getUsers",
+        "tags": ["User Data"],
+        "summary": "Register User",
+        "parameters": [
+          {
+            "in": "body",
+            "name": "body",
+            "description": "Register user data",
+            "required": true,
+            "schema": {
+              "$ref": "#definitions/UserRegister"
             }
           },
-        "Appointments": {
-            "properties": {
-                "idUser": {
-                    "type": "Schema.Types.ObjectId",
-                    "ref": "users"
-                },
-                "idPacient": {
-                    "type": "Schema.Types.ObjectId",
-                    "ref": "users"
-                },
-                "date": {
-                    "type": "string"
-                },
-                "hour": {
-                    "type": "string"
-                }
-            },
-            "xml": {
-                "name": "Appointments"
+          {
+            "name": "authorization",
+            "in": "header",
+            "description": "an authorization header",
+            "required": "true",
+            "type": "string"
+          }
+        ],
+        "responses": {}
+      }
+    },
+    "/login": {
+      "post": {
+        "x-swagger-router-controller": "middleware-name3",
+        "operationId": "login",
+        "tags": ["Login"],
+        "summary": "Log a user",
+        "parameters": [
+          {
+            "in": "body",
+            "name": "body",
+            "description": "Login data",
+            "required": true,
+            "schema": {
+              "$ref": "#definitions/Login"
             }
+          }
+        ],
+        "responses": {}
+      }
+    },
+    "/appointments": {
+        "get": {
+            "x-swagger-router-controller": "middleware-name3",
+            "operationId": "showAppointments",
+            "tags": ["Appointments"],
+            "summary": "Show appointments",
+            "parameters": [{
+                "in": "query",
+                "name": "page",
+                "required": false,
+                "type": "string"
+            }, {
+                "in": "query",
+                "name": "size",
+                "required": false,
+                "type": "string" 
+            }, {
+                "in": "query",
+                "name": "order",
+                "required": false,
+                "type": "string"
+            }, {
+                "in": "query",
+                "name": "way",
+                "required": false,
+                "type": "string"
+            }, {
+                "in": "header",
+                "name": "authorization",
+                "require": true,
+                "type": "string"
+            }],
+            "responses": {
+
+            }
+        }
+    }
+  },
+  "definitions": {
+    "User": {
+      "properties": {
+        "name": {
+          "type": "string"
+        },
+        "middleName": {
+          "type": "string"
+        },
+        "lastName": {
+          "type": "string"
+        },
+        "email": {
+          "type": "string"
+        },
+        "phone": {
+          "type": "string"
+        },
+        "password": {
+          "type": "string"
+        },
+        "birthdate": {
+          "type": "date"
+        },
+        "maritalStatus": {
+          "type": "string"
+        },
+        "idRecord": {
+          "type": "Schema.Types.ObjectId",
+          "ref": "records"
+        },
+        "status": {
+          "type": "boolean",
+          "default": "true"
+        },
+        "background": {
+          "type": "boolean"
+        },
+        "range": {
+          "type": "number",
+          "default": "1"
+        },
+        "cause": {
+          "type": "string"
+        }
+      },
+      "xml": {
+        "name": "User"
+      }
+    },
+    "UserRegister": {
+      "properties": {
+        "name": {
+          "type": "string"
+        },
+        "middleName": {
+          "type": "string"
+        },
+        "lastName": {
+          "type": "string"
+        },
+        "email": {
+          "type": "string"
+        },
+        "phone": {
+          "type": "number"
+        },
+        "birthdate": {
+          "type": "date"
+        },
+        "maritalStatus": {
+          "type": "string"
+        },
+        "cause": {
+          "type": "string",
+          "ref": "records"
+        }
+      },
+      "xml": {
+        "name": "User"
+      }
+    },
+    "Login": {
+      "properties": {
+        "email": {
+          "type": "string"
+        },
+        "password": {
+          "type": "string"
+        }
+      },
+      "xml": {
+        "name": "Login"
+      }
+    },
+    "Appointments": {
+        "properties": {
+            "idUser": {
+                "type": "Schema.Types.ObjectId",
+                "ref": "users"
+            },
+            "idPacient": {
+                "type": "Schema.Types.ObjectId",
+                "ref": "users"
+            },
+            "date": {
+                "type": "string"
+            },
+            "hour": {
+                "type": "string"
+            }
+        },
+        "xml": {
+            "name": "Appointments"
         }
     }
 }
